typescript/checker/tests/conformance/es6/for-ofStatements/for-of15.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            146,
        ),
        hi: BytePos(
            147,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/for-ofStatements/for-of15.ts:11:5
   |
11 | var v: string;
   |     ^

